Add initial logging support
- api/config/constants.js
    - Add constants file with constants for action and entity types
- api/models/log.model.js
    - Add schema for logs, this may change regarding the entityId as it might not be possible to return the full entity
- api/routes/index.js
    - Add user routes to default router
- api/routes/user.route.js
    - Add route to return all the logs of an authenticated user
- api/services/log.service.js
    - Add function to get all the logs from a user id
    - Add function to create a log when a new account is created
- api/services/user.service.js
    - Add log of account creation
    - Remove old comments
- docs/api.swagger.yaml
    - Add documentation for the logs endpoint
